infra/k3s/jenkins/jenkins-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-tls
  namespace: cicd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jenkins.83.69.249.206.nip.io
      secretName: jenkins-tls-secret
  rules:
    - host: jenkins.83.69.249.206.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
